--- a/07_02_01_babushka/babushka.html
+++ b/07_02_01_babushka/babushka.html
@@ -1,82 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 
 <head>
-    <meta charset="UTF-8">
-    <title>galleri</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        #liste {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-gap: 1em;
+            margin: 2em;
+        }
+
+        .person {
+            padding: 1em;
+            border: 1px solid;
+            border-radius: 1em;
+        }
+
+        .valgt {
+            color: red;
+            border: solid;
+        }
+
+        header {
+            text-align: center;
+        }
+    </style>
+
 </head>
-<style>
-    * {
-        box-sizing: border-box;
-    }
 
-    main {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-        gap: 5px;
-    }
 
-    article {
-        border: 1px solid black;
-        margin: 10px;
-        border-radius: 5px;
-        padding: 10px;
-    }
-
-    img {
-        max-width: 100%;
-    }
-
-</style>
 
 <body>
+    <header>
+        <h1>Alle</h1>
+        <nav>
+            <button data-kategori="alle" class="valgt">Alle</button>
+            <button data-kategori="forretter">Forretter</button>
+            <button data-kategori="hovedretter">Hovedretter</button>
+            <button data-kategori="desserter">Desserter</button>
+            <button data-kategori="drikkevarer">Drikkevarer</button>
+        </nav>
+    </header>
 
-    <main></main>
+    <section id="liste"></section>
 
     <template>
-        <article>
+        <article class="retter">
+            <h2 class="navn"> </h2>
+            <p class="kortbeskrivelse">Kort Beksrivelse: </p>
+            <p class="oprindelsesregion">Oprindelsesregion: </p>
+            <p class="pris">Pris: </p>
             <img src="" alt="" class="billede">
-            <h2 class="navn"></h2>
-            <p class="titel"></p>
-            <p class="fødselsdag"></p>
         </article>
     </template>
 
+
     <script>
+        const header = document.querySelector("header h1");
         const url = "https://babushka-dd8a.restdb.io/rest/menu";
-
         const medieurl = "https://babushka-dd8a.restdb.io/media";
+        const myHeaders = {
 
-        const options = {
-            headers: {
-                'x-apikey': "600ec2fb1346a1524ff12de4"
-            }
-        };
+            "x-apikey": "600ec2fb1346a1524ff12de4"
+        }
+        document.addEventListener("DOMContentLoaded", start)
+        let retter;
+        let filter = "alle";
 
-        async function hentData() {
-            const resspons = await fetch(url, options);
-            const json = await resspons.json();
-            vis(json);
+
+        // første funktion der kaldes efter DOM er loaded
+        function start() {
+            const filterKnapper = document.querySelectorAll("nav button");
+            filterKnapper.forEach(knap => knap.addEventListener("click", filtrerRetter));
+
+            loadJSON();
         }
 
-        const main = document.querySelector("main");
-        const template = document.querySelector("template").content;
+        //        eventlistener knyttet til knapper der vælger hvad for et filter der er aktivt
+        function filtrerRetter() {
+            filter = this.dataset.kategori; //sæt variabel "filter" til værdien af data-troende på den knap der bliver klikket på
+            document.querySelector(".valgt").classList.remove("valgt"); //fjern klassen valgt fra den knap der var valgt
+            this.classList.add("valgt") //marker den knap der er klikket på
 
-        function vis(json) {
-            console.log(json)
-            json.forEach(person => {
-                const klon = template.cloneNode(true);
-                klon.querySelector(".billede").src = medieurl + person.billede;
-                klon.querySelector(".navn").textContent = person.fornavn + person.efternavn;
-                klon.querySelector(".titel").textContent = person.titel;
-                klon.querySelector(".fødselsdag").textContent = person.fødselsdag;
-                main.appendChild(klon);
+            visRetter(); //kald funktionen visPersoner efter det nye filter er sat
+            header.textContent = this.textContent;
+        }
+
+        async function loadJSON() {
+            const JSONData = await fetch("https://babushka-dd8a.restdb.io/rest/menu", {
+                headers: myHeaders
+            });
+            retter = await JSONData.json();
+            console.log("Retter", retter);
+            visRetter();
+        }
+
+        //funktion der viser personer i liste view
+        function visRetter() {
+
+            const dest = document.querySelector("#liste"); // container til articles med en person
+            const skabelon = document.querySelector("template").content; // select indhold af html skabelon (article)
+            dest.textContent = ""; //ryd container inden ny loop
+            retter.forEach(ret => {
+                console.log("Kategori", ret.kategori);
+                // loop igennem json (personer)
+                // tjek hvilken tro personen har og sammenlign med aktuelt filter eller vis alle, hvis filteret har væriden "alle"
+                // hvis filter er lig med valuen af person.troende (ja, nej, tvivler) eller hvis filter er lig med "alle"
+                if (filter == ret.kategori || filter == "alle") {
+                    const klon = skabelon.cloneNode(true);
+                    klon.querySelector(".navn").textContent = ret.navn;
+
+                    klon.querySelector(".kortbeskrivelse").textContent += ret.beskrivelse;
+
+                    klon.querySelector(".oprindelsesregion").textContent += ret.oprindelsesregion;
+
+                    klon.querySelector(".pris").textContent += ret.pris;
+
+                    klon.querySelector(".billede").src = medieurl + ret.billede;
+                    dest.appendChild(klon);
+                }
             })
         }
-
-        hentData();
-
     </script>
-</body>
-
-</html>
+</body></html>
