--- a/07_02_01_babushka/babushka.html
+++ b/07_02_01_babushka/babushka.html
@@ -35,6 +35,7 @@
         header {
             text-align: center;
         }
+
     </style>
 
 </head>
@@ -69,7 +70,7 @@
     <script>
         const header = document.querySelector("header h1");
         const url = "https://babushka-dd8a.restdb.io/rest/menu";
-        const medieurl = "https://babushka-dd8a.restdb.io/media";
+        const medieurl = "https://babushka-dd8a.restdb.io/media/";
         const myHeaders = {
 
             "x-apikey": "600ec2fb1346a1524ff12de4"
@@ -132,5 +133,8 @@
                 }
             })
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
