--- a/07_02_01_babushka/babushka.html
+++ b/07_02_01_babushka/babushka.html
@@ -58,7 +58,7 @@
     <template>
         <article class="retter">
             <h2 class="navn"> </h2>
-            <p class="kortbeskrivelse">Kort Beksrivelse: </p>
+            <p class="kortbeskrivelse">Kort beksrivelse: </p>
             <p class="pris">Pris: </p>
             <img src="" alt="" class="billede">
         </article>
