--- a/07_02_01_babushka/02-detalje.html
+++ b/07_02_01_babushka/02-detalje.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="">
+
+    <style>
+
+
+    </style>
 </head>
 
 <body>
