--- a/07_02_01_babushka/babushka.html
+++ b/07_02_01_babushka/babushka.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100&family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <title>babushka</title>
     <style>
         body {
@@ -30,13 +32,8 @@
 
         .retter {
             padding: 1em;
-            border: 1px solid;
+            border: darkblue 1px solid;
             border-radius: 1em;
-        }
-
-        .valgt {
-            color: darkblue;
-            border: solid;
         }
 
         header {
@@ -48,6 +45,26 @@
             text-align: center;
             font-family: 'Big Shoulders Display', cursive;
             font-size: 50px;
+            color: darkblue;
+        }
+
+        h2,
+        p {
+            font-family: 'Montserrat', sans-serif;
+            color: darkblue;
+        }
+
+        button {
+            font-family: 'Montserrat', sans-serif;
+            background-color: aliceblue;
+            border: darkblue 1px solid;
+            color: darkblue;
+        }
+
+        .valgt {
+            background-color: darkblue;
+            color: white;
+            text-decoration: none;
         }
 
     </style>
