--- a/07_02_01_babushka/babushka.html
+++ b/07_02_01_babushka/babushka.html
@@ -42,10 +42,11 @@
         }
 
         .overskrift {
-            text-align: center;
             font-family: 'Big Shoulders Display', cursive;
             font-size: 50px;
             color: darkblue;
+            display: flex;
+            justify-content: center;
         }
 
         h2,
@@ -71,12 +72,7 @@
 
 
         .dukke {
-            margin-left: 70vw;
-            margin-top: -5vw;
-            z-index: -15;
-            position: absolute;
-            width: 10vw;
-            height: 20vh;
+            width: 100px;
         }
     </style>
 
@@ -87,10 +83,11 @@
 <body>
     <div class="overskrift">
         <h1>Bistro Babushka</h1>
+        <div class="dukke">
+            <img src="SVG/dukke.svg" alt="dukke">
+        </div>
     </div>
-    <div class="dukke">
-        <img src="SVG/dukke.svg" alt="dukke">
-    </div>
+
 
 
 
