--- a/07_02_01_babushka/02-detalje.html
+++ b/07_02_01_babushka/02-detalje.html
@@ -31,8 +31,10 @@
             width: 30%;
             height: 30%;
             margin: 10px;
+            border: darkblue 1px solid;
+            border-radius: 1em;
+            padding: 1em;
         }
-
     </style>
 </head>
 
@@ -73,8 +75,5 @@
             document.querySelector(".billede").src = medieurl + ret.billede;
 
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
