--- a/07_02_01_babushka/babushka.html
+++ b/07_02_01_babushka/babushka.html
@@ -37,7 +37,7 @@
         }
 
         header {
-            margin-top: 4rem;
+            margin-top: 1rem;
             text-align: left;
         }
 
@@ -73,7 +73,9 @@
 
         .dukke {
             width: 100px;
+            margin-left: 10px;
         }
+
     </style>
 
 </head>
@@ -187,5 +189,9 @@
         function visDetaljer(hvem) {
             location.href = `02-detalje.html?id=${hvem._id}`;
         }
+
     </script>
-</body></html>
+
+</body>
+
+</html>
